--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,10 +85,23 @@ aside {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
 }
-
-.benefit-lead {
+ .Benefits {
     margin-bottom: 32px;
     color: #ffffff;
+ } 
+
+  .benefits h3 {
+    margin-bottom: 10px;
+    text-align: center;
+   }  
+
+   .benefits img {
+    display: block;
+    margin: 10px auto;
+    max-width: 150px;
+}  
+ /*.benefit-lead {margin-bottom: 32px;
+color: #ffffff;
 }
 
 .benefit-brand {
@@ -133,6 +146,7 @@ aside {
     margin: 10px auto;
     max-width: 150px;
 }
+ */
 
 .search-engine-optimization  {
     margin-bottom: 20px;
